feat: added linter settings and implemented styles on the lesson page

--- a/src/localization/en/en.lang.json
+++ b/src/localization/en/en.lang.json
@@ -1,5 +1,70 @@
 {
-  "Test": {
-    "wordTest": "the result test"
+  "Placeholder": {
+    "v2": "v2",
+    "simplePast": "Simple Past",
+    "v3": "v3",
+    "pastParticiple": "Past Participle"
+  },
+  "Main": {
+    "sinav": "EXAM",
+    "liste": "LIST",
+    "calis": "FLASHCARDS",
+    "uygulamaadi": "Irregular Verbs",
+    "orijinal": "Original",
+    "ahsap": "Wood",
+    "night": "Night",
+    "temasec": "CHOOSE YOUR THEME",
+    "seviye1": "LEVEL 1",
+    "seviye2": "LEVEL 2",
+    "seviye3": "LEVEL 3",
+    "most50": "MOST 50",
+    "plus50": "PLUS 50",
+    "pro": "PRO",
+    "tamamlandi": "COMPLETED",
+    "yanlisdogrusu": "Wrong! Correct answer:",
+    "seviye1calis": "STUDY LEVEL 1",
+    "seviye2calis": "STUDY LEVEL 2",
+    "seviye3calis": "STUDY LEVEL 3",
+    "start": "START",
+    "sonraki": "NEXT",
+    "ogrenmedurum": "YOUR LEARNING PROGRESS",
+    "resetaciklama": "If you want to reset your all progress, use this button. If you reset, it cannot be undone.",
+    "resetbutton": "RESET MY ALL PROGRESS",
+    "vazgec": "Cancel",
+    "resetfull": "You are deleting your all progress. Are you sure?",
+    "resetfullonay": "Reset all",
+    "tamam": "OK",
+    "aramaholder": "Search an irregular verb",
+    "hicyanlisyok": "You have no verbs here",
+    "ratenow": "Rate Now!",
+    "gorseller": "IMAGES",
+    "tumu": "ALL",
+    "removeads": "REMOVE ADS",
+    "languagename": "English",
+    "deniz": "Sea",
+    "tesekkur": "THANK YOU",
+    "install": "INSTALL",
+    "flags": "FLAGS OF THE WORLD",
+    "flagstwo": "FLAGS 2",
+    "touchlearn": "TOUCH & LEARN",
+    "learnflags": "Learn country names in English!",
+    "language": "LANGUAGE",
+    "ratestring": "Do you want to rate us? ★★★★★",
+    "areyousure": "Are you sure?",
+    "continue": "CONTINUE",
+    "finish": "FINISH",
+    "copied": "Copied",
+    "yes": "Yes",
+    "day": "DAY",
+    "practice": "PRACTICE",
+    "check": "CHECK",
+    "skip": "SKIP",
+    "stay": "Stay",
+    "quit": "Quit",
+    "continue2": "CONTINUE",
+    "areyousure2": "Are you sure you want to quit?",
+    "daylimited": "DAY",
+    "streaktooltip": "Play every day, extend your streak!",
+    "share": "SHARE"
   }
 }
