--- a/src/localization/fr/fr.lang.json
+++ b/src/localization/fr/fr.lang.json
@@ -1,5 +1,70 @@
 {
-  "Test": {
-    "wordTest": "the result test FR"
+  "Placeholder": {
+    "v2": "v2",
+    "simplePast": "Simple Past",
+    "v3": "v3",
+    "pastParticiple": "Past Participle"
+  },
+  "Main": {
+    "sinav": "EXAMEN",
+    "liste": "LISTE",
+    "calis": "CARTE MÉMOIRE",
+    "uygulamaadi": "Verbes Irréguliers",
+    "orijinal": "Originel",
+    "ahsap": "Bois",
+    "night": "Nuit",
+    "temasec": "CHOISIR UNE THÈME",
+    "seviye1": "NIVEAU 1",
+    "seviye2": "NIVEAU 2",
+    "seviye3": "NIVEAU 3",
+    "most50": "LES PLUS",
+    "plus50": "PLUS 50+",
+    "pro": "EXPERT",
+    "tamamlandi": "COMPLET",
+    "yanlisdogrusu": "Mauvaise réponse! La réponse correcte:",
+    "seviye1calis": "ÉTUDIER LE NIVEAU 1",
+    "seviye2calis": "ÉTUDIER LE NIVEAU 2",
+    "seviye3calis": "ÉTUDIER LE NIVEAU 3",
+    "start": "COMMENCER",
+    "sonraki": "SUIVANT",
+    "ogrenmedurum": "VOTRE PROGRÈS",
+    "resetaciklama": "Utilisez le bouton en bas pour effacer toutes vos réponses et recommencer. Vous ne pourrez pas défaire cette opération",
+    "resetbutton": "RÉINITIALISER MON PROGRÈS",
+    "vazgec": "Annuler",
+    "resetfull": "Êtes-vous sûr(e) que vous voulez réinitialiser toutes vos données?",
+    "resetfullonay": "Réinitialiser les donées",
+    "tamam": "D'accord",
+    "aramaholder": "tapez le verbe",
+    "hicyanlisyok": "Aucun verbe ici",
+    "ratenow": "D'accord",
+    "gorseller": "IMAGES",
+    "tumu": "TOUT",
+    "removeads": "SANS PUBLICITÉ",
+    "languagename": "Français",
+    "deniz": "Mer",
+    "tesekkur": "JE VOUS REMERCIE!",
+    "install": "INSTALLER",
+    "flags": "DRAPEAUX DU MONDE",
+    "flagstwo": "DRAPEAUX 2",
+    "touchlearn": "TOUCHER ET APPRENDRE",
+    "learnflags": "Apprenez les noms de pays en anglais!",
+    "language": "LANGUE",
+    "ratestring": "Voulez-vous nous évaluer? ★★★★★",
+    "areyousure": "Êtes-vous sûr?",
+    "continue": "CONTINUER",
+    "finish": "TERMINER",
+    "copied": "Il Est Copié",
+    "yes": "Oui",
+    "day": "JOURNÉE",
+    "practice": "PRATIQUER",
+    "check": "VALIDER",
+    "skip": "PASSER",
+    "stay": "Rester",
+    "quit": "Quitter",
+    "continue2": "CONTINUER",
+    "areyousure2": "Tu veux vraiment t'arrêter là?",
+    "daylimited": "DAY",
+    "streaktooltip": "Play every day, extend your streak!",
+    "share": "PARTAGER"
   }
 }
