implemented profile screen, added spirit animals, added modal windows

--- a/src/localization/bn/bn.lang.json
+++ b/src/localization/bn/bn.lang.json
@@ -63,7 +63,7 @@
     "quit": "বের হয়ে যান",
     "continue2": "চালিয়ে যান",
     "areyousure2": "আপনি কি আসলেই চলে যেতে চান?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "শেয়ার করুন"
   }
