--- a/src/localization/de/de.lang.json
+++ b/src/localization/de/de.lang.json
@@ -63,7 +63,7 @@
     "quit": "Aufhören",
     "continue2": "WEITER",
     "areyousure2": "Willst du wirklich aufhören?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "TEILEN"
   }
