--- a/src/localization/en/en.lang.json
+++ b/src/localization/en/en.lang.json
@@ -63,7 +63,7 @@
     "quit": "Quit",
     "continue2": "CONTINUE",
     "areyousure2": "Are you sure you want to quit?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "SHARE"
   }
