--- a/src/localization/he/he.lang.json
+++ b/src/localization/he/he.lang.json
@@ -63,7 +63,7 @@
     "quit": "הַפְסֵק",
     "continue2": "הַמְשֵׁךְ",
     "areyousure2": "האם אתה בטוח?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "שתף"
   }
