--- a/src/localization/ka/ka.lang.json
+++ b/src/localization/ka/ka.lang.json
@@ -63,7 +63,7 @@
     "quit": "ᲓᲐᲢᲝᲕᲔᲑᲐ",
     "continue2": "გაგრძელება",
     "areyousure2": "დარწმუნებული ხარ?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "გაზირება"
   }
