--- a/src/localization/ko/ko.lang.json
+++ b/src/localization/ko/ko.lang.json
@@ -63,7 +63,7 @@
     "quit": "그만하기",
     "continue2": "계속하기",
     "areyousure2": "정말 그만두시겠습니까?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "공유"
   }
