--- a/src/localization/pl/pl.lang.json
+++ b/src/localization/pl/pl.lang.json
@@ -63,7 +63,7 @@
     "quit": "Wyjdź",
     "continue2": "KONTYNUUJ",
     "areyousure2": "Czy na pewno chcesz wyjść?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "UDOSTĘPNIJ"
   }
