--- a/src/localization/ru/ru.lang.json
+++ b/src/localization/ru/ru.lang.json
@@ -63,7 +63,7 @@
     "quit": "Выйти",
     "continue2": "ДАЛЕЕ",
     "areyousure2": "Действительно хотите выйти?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "ПОДЕЛИТЬСЯ"
   }
