--- a/src/localization/fr/fr.lang.json
+++ b/src/localization/fr/fr.lang.json
@@ -63,7 +63,7 @@
     "quit": "Quitter",
     "continue2": "CONTINUER",
     "areyousure2": "Tu veux vraiment t'arrêter là?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "PARTAGER"
   }
