--- a/src/localization/hi/hi.lang.json
+++ b/src/localization/hi/hi.lang.json
@@ -63,7 +63,7 @@
     "quit": "बंद करें",
     "continue2": "जारी रखें",
     "areyousure2": "क्या आप सचमुच प्रैक्टिस छोड़कर जाना चाहते हैं?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "शेयर करें"
   }
