--- a/src/localization/id/id.lang.json
+++ b/src/localization/id/id.lang.json
@@ -63,7 +63,7 @@
     "quit": "Keluar",
     "continue2": "LANJUTKAN",
     "areyousure2": "Yakin mau keluar?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "BAGIKAN"
   }
