--- a/src/localization/it/it.lang.json
+++ b/src/localization/it/it.lang.json
@@ -63,7 +63,7 @@
     "quit": "Esci",
     "continue2": "CONTINUA",
     "areyousure2": "Vuoi davvero uscire?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "CONDIVIDI"
   }
