--- a/src/localization/pt/pt.lang.json
+++ b/src/localization/pt/pt.lang.json
@@ -63,7 +63,7 @@
     "quit": "Sair",
     "continue2": "CONTINUAR",
     "areyousure2": "Quer mesmo sair?",
-    "daylimited": "DAY",
+    "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
     "share": "COMPARTILHE"
   }
