added wrong answer behaviour to the lesson screen

--- a/src/localization/ar/ar.lang.json
+++ b/src/localization/ar/ar.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "هل تود حقا الانسحاب؟",
     "daylimited": "اليوم",
     "streaktooltip": "العب كل يوم واجعل سلسلتك أطول!",
-    "share": "شارك"
+    "share": "شارك",
+    "sentenceTitle": "Sentence Example"
   }
 }
