--- a/src/localization/bn/bn.lang.json
+++ b/src/localization/bn/bn.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "আপনি কি আসলেই চলে যেতে চান?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "শেয়ার করুন"
+    "share": "শেয়ার করুন",
+    "sentenceTitle": "Sentence Example"
   }
 }
