--- a/src/localization/de/de.lang.json
+++ b/src/localization/de/de.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Willst du wirklich aufhören?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "TEILEN"
+    "share": "TEILEN",
+    "sentenceTitle": "Sentence Example"
   }
 }
