--- a/src/localization/es/es.lang.json
+++ b/src/localization/es/es.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "¿Realmente quieres salir?",
     "daylimited": "DÍA",
     "streaktooltip": "¡Juga todos los dias, extende tu racha!",
-    "share": "COMPARTIR"
+    "share": "COMPARTIR",
+    "sentenceTitle": "Sentence Example"
   }
 }
