--- a/src/localization/fr/fr.lang.json
+++ b/src/localization/fr/fr.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Tu veux vraiment t'arrêter là?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "PARTAGER"
+    "share": "PARTAGER",
+    "sentenceTitle": "Sentence Example"
   }
 }
