--- a/src/localization/id/id.lang.json
+++ b/src/localization/id/id.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Yakin mau keluar?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "BAGIKAN"
+    "share": "BAGIKAN",
+    "sentenceTitle": "Sentence Example"
   }
 }
