--- a/src/localization/ka/ka.lang.json
+++ b/src/localization/ka/ka.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "დარწმუნებული ხარ?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "გაზირება"
+    "share": "გაზირება",
+    "sentenceTitle": "Sentence Example"
   }
 }
