--- a/src/localization/ko/ko.lang.json
+++ b/src/localization/ko/ko.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "정말 그만두시겠습니까?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "공유"
+    "share": "공유",
+    "sentenceTitle": "Sentence Example"
   }
 }
