--- a/src/localization/pt/pt.lang.json
+++ b/src/localization/pt/pt.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Quer mesmo sair?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "COMPARTILHE"
+    "share": "COMPARTILHE",
+    "sentenceTitle": "Sentence Example"
   }
 }
