--- a/src/localization/tr/tr.lang.json
+++ b/src/localization/tr/tr.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Çıkmak istediğinden emin misin?",
     "daylimited": "GÜN",
     "streaktooltip": "Her gün oyna, serini uzat!",
-    "share": "PAYLAŞ"
+    "share": "PAYLAŞ",
+    "sentenceTitle": "Sentence Example"
   }
 }
