--- a/src/localization/en/en.lang.json
+++ b/src/localization/en/en.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Are you sure you want to quit?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "SHARE"
+    "share": "SHARE",
+    "sentenceTitle": "Sentence Example"
   }
 }
