--- a/src/localization/he/he.lang.json
+++ b/src/localization/he/he.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "האם אתה בטוח?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "שתף"
+    "share": "שתף",
+    "sentenceTitle": "Sentence Example"
   }
 }
