--- a/src/localization/hi/hi.lang.json
+++ b/src/localization/hi/hi.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "क्या आप सचमुच प्रैक्टिस छोड़कर जाना चाहते हैं?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "शेयर करें"
+    "share": "शेयर करें",
+    "sentenceTitle": "Sentence Example"
   }
 }
