--- a/src/localization/it/it.lang.json
+++ b/src/localization/it/it.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Vuoi davvero uscire?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "CONDIVIDI"
+    "share": "CONDIVIDI",
+    "sentenceTitle": "Sentence Example"
   }
 }
