--- a/src/localization/pl/pl.lang.json
+++ b/src/localization/pl/pl.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Czy na pewno chcesz wyjść?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "UDOSTĘPNIJ"
+    "share": "UDOSTĘPNIJ",
+    "sentenceTitle": "Sentence Example"
   }
 }
