--- a/src/localization/ru/ru.lang.json
+++ b/src/localization/ru/ru.lang.json
@@ -65,6 +65,7 @@
     "areyousure2": "Действительно хотите выйти?",
     "daylimited": "DAYS without break",
     "streaktooltip": "Play every day, extend your streak!",
-    "share": "ПОДЕЛИТЬСЯ"
+    "share": "ПОДЕЛИТЬСЯ",
+    "sentenceTitle": "Sentence Example"
   }
 }
